Привет в порядок xml файлы.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,60 +1,59 @@
 <resources>
-    <string name="app_name">Manager Car</string>
-
-    <string name="car_brand">CAR BRAND</string>
-    <string name="car_model">CAR MODEL</string>
-    <string name="next">NEXT</string>
-    <string name="enter_speedometr">TO ENTER THE SPEEDOMETER READING</string>
-    <string name="manual_input">MANUALLY</string>
-    <string name="foto_input">PHOTOGRAPH</string>
-    <string name="enter_data">ENTER THE DATE OF THE LAST INSPECTION</string>
-    <string name="interval_km">ENTER THE INTERVAL IN KILOMETR</string>
-    <string name="interval_mount">CHOOSE THE INTERVAL IN MONTHS</string>
-    <string name="kilometr">KM</string>
+    <string name="app_name">Менеджер автомобиля</string>
+    <string name="car_brand">Бренд авто</string>
+    <string name="car_model">Модель авто</string>
+    <string name="next">Дальше</string>
+    <string name="enter_speedometr">Ввести показания спидометра</string>
+    <string name="manual_input">Вручную</string>
+    <string name="foto_input">Фото</string>
+    <string name="enter_data">Введите дату последнего ТО</string>
+    <string name="interval_km">Введите интервал, в КМ</string>
+    <string name="interval_mount">Выберите интервал, в мес.</string>
+    <string name="kilometr">км.</string>
     <string name="recall">RECALL CHECKUP FOR</string>
-    <string name="repeat">REPEAT</string>
-    <string name="every">EVERY</string>
-    <string name="month">MONTH</string>
-    <string name="day">DAY</string>
-    <string name="to_send">REMINDER TO SEND</string>
-    <string name="array_1">ENTER THE LIST OF CONTROLLED PARAMETERS</string>
-    <string name="array_2">TO ENTER A LIST OF INTERCHANGEABLE PARTS</string>
-    <string name="array_3">VIEW A LIST OF INTERCHANGEABLE PARTS</string>
-    <string name="array_4">EDIT A LIST OF INTERCHANGEABLE PARTS</string>
-    <string name="array_5">VIEW A LIST OF CONTROLLED PARAMETERS</string>
-    <string name="array_6">EDIT A LIST OF CONTROLLED PARAMETERS</string>
-    <string name="change_alert">TO CHANGE THE ALERT</string>
-    <string name="name_parts">NAME PART</string>
-    <string name="name_parameters">NAME PARAMETERS</string>
-    <string name="catalogue_number">CATALOGUE NUMBER</string>
-    <string name="replace">REPLACE</string>
-    <string name="control">CONTROL</string>
-    <string name="add">ADD</string>
-    <string name="complete">COMPLETE</string>
+    <string name="repeat">повторить</string>
+    <string name="every">каждый</string>
+    <string name="month">месяц</string>
+    <string name="day">день</string>
+    <string name="to_send">отправить напоминание</string>
+    <string name="array_1">ввести список контролируемых параметров</string>
+    <string name="array_2">ввести список заменяемых деталей</string>
+    <string name="array_3">посмотреть список заменяемых деталей</string>
+    <string name="array_4">редактировать список заменяемых деталей</string>
+    <string name="array_5">посмотреть список контролируемых параметров</string>
+    <string name="array_6">редактировать список контролируемых параметров</string>
+    <string name="change_alert">изменить оповещения</string>
+    <string name="name_parts">наименование детали</string>
+    <string name="name_parameters">наименование параметра</string>
+    <string name="catalogue_number">каталожный номер</string>
+    <string name="replace">заменить</string>
+    <string name="control">контролировать</string>
+    <string name="add">добавить</string>
+    <string name="complete">выполнено</string>
     <string name="exist">EXIST.RU</string>
     <string name="autodoc">AUTODOC.RU</string>
     <string name="emex">EMEX.RU</string>
-    <string name="delete">DELETE</string>
-    <string name="edit">EDIT</string>
-    <string name="enter_configuration">TO ENTER THE INITIAL CONFIGURATION</string>
-    <string name="proir_inspection">prior to the technical inspection there were</string>
-    <string name="inspectoin_achievement">technical inspection upon achievement</string>
-    <string name="daedline_inspection">the deadline for technical inspection</string>
-    <string name="erorr1">complete initial configuration of the program</string>
-    <string name="field_valid_1">Field</string>
-    <string name="field_valid_2">not filled. Please fill it out.</string>
-    <string name="warning_layout_enter_3">Please choose the interval in mount.</string>
-    <string name="warning_layout_enter_5">Please fill Part and Parameter.</string>
-    <string name="part">Part</string>
-    <string name="parameter">Parameter</string>
-    <string name="with">with </string>
-    <string name="warning_my_application_part">already exists. Enter the correct number.</string>
-    <string name="warning_my_application_parameter">already exists. Enter the correct Name.</string>
-    <string name="page1">PAGE 1 OF 5</string>
-    <string name="page2">PAGE 2 OF 5</string>
-    <string name="page3">PAGE 3 OF 5</string>
-    <string name="page4">PAGE 4 OF 5</string>
-    <string name="page5">PAGE 5 OF 5</string>
+    <string name="delete">удалить</string>
+    <string name="edit">редактировать</string>
+    <string name="enter_configuration">начальная конфигурация</string>
+    <string name="proir_inspection">до начала ТО были</string>
+    <string name="inspectoin_achievement">ТО при достижении</string>
+    <string name="daedline_inspection">срок ТО</string>
+    <string name="erorr1">запустить начальную конфигурацию приложения</string>
+    <string name="field_valid_1">поле</string>
+    <string name="field_valid_2">не заполненно. Пожалуйста заполните его</string>
+    <string name="warning_layout_enter_3">Пожалуйста выберите интервал, мес.</string>
+    <string name="warning_layout_enter_5">Пожалуйста заполните разделы Детали и Параметры</string>
+    <string name="part">деталь</string>
+    <string name="parameter">параметр</string>
+    <string name="with">с </string>
+    <string name="warning_my_application_part">дублируется. Введите правильный номер</string>
+    <string name="warning_my_application_parameter">дублируется. Введите правильное имя</string>
+    <string name="page1">Страница 1 из 5</string>
+    <string name="page2">Страница 2 из 5</string>
+    <string name="page3">Страница 3 из 5</string>
+    <string name="page4">Страница 4 из 5</string>
+    <string name="page5">Страница 5 из 5</string>
     <string name="hour">8</string>
     <string name="minute">0</string>
 
